Fix issues with mobile responsive cards
Flex basis property was too large for cards to be responsive

--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ textarea:not([rows]) {
   padding: 24px;
   border: 1px solid #c9c9c9;
   border-radius: 1rem;
-  flex: 1 1 10rem;
+  flex: 1 1 0;
 }
 
 .card img {
